fix code, delete text-wrap

--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,9 @@ body {
   margin: 0;
 }
 
-.text-wrap {
-  background-color: #ddd;
-}
-
 .text {
   margin: 0;
+  background-color: #ddd;
 }
 
 .blocks {
